# IndustrialAgent

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  START.md  deploy.sh  deploy_prod.sh  docker-compose.prod.yml  docker-compose.yml  env.example  pyproject.toml  requirements.txt  start.sh
Advance/: Chroma.py  ingest_docs.py  ingestion.py  retriever.py
Doc/API/: 00_common.md  01_home.md  02_workbench.md  03_library.md  04_ocr.md  05_agent_flow.md  06_trashbin.md  07_chat.md  08_core_api.md  09_open_platform.md  10_settings.md  AgentBackend.md  README.md  conflict_check_report.md  response_format_check.md
Doc/Guidelines/: 01_code_style.md  02_code_checking.md  README.md
Doc/Modules/: 00_overview.md  01_api_layer.md  02_agent_layer.md  03_rag_layer.md  04_database_layer.md  05_core_layer.md  06_document_library.md  07_user_management.md  08_module_communication.md  09_data_isolation.md  README.md
Doc/Plan/: project_plan.md
Doc/Selection/: 00_overview.md  01_web_framework.md  02_database.md  03_vector_db.md  04_llm_embedding.md  05_retrieval.md  07_rag_framework.md  09_email_service.md  README.md
achieved/: alembic_admin_migration.md  alembic_setup.md  api.md  docker_deployment.md  email_setup_guide.md  huggingface_mirror.md  pdf_to_text.md  production_deployment.md  production_deployment_guide.md  query_expansion.md  redis_usage.md  rerank_optimization.md  search_accuracy_analysis.md  search_cache.md  search_improvement.md  system_reset_guide.md  tokenizers_fork_deadlock.md
alembic/: README.md  env.py
app/: __init__.py  deps.py  main.py
app/agents/: qa_agent.py  tools.py
app/api/: __init__.py
app/api/v1/: __init__.py  admin.py  auth.py  docs.py  groups.py  qa.py
app/core/: cache.py  config.py  email.py  logging.py  response.py  security.py
app/db/: crud.py  models.py  session.py
app/rag/: evaluators.py  ingestion.py  pipeline.py  prompts.py  reranker.py  retriever.py  synonyms.py
app/users/: email_verification.py
data/: synonyms_example.json
scripts/: README_BACKUP.md  add_is_default_field.py  backup.sh  check_backup.sh  check_code.sh  cleanup_backups.sh  create_admin.py  create_initial_migration.py  fix_library_collection_names.py  ingest_docs.py  init_db.py  init_redis.py  reset_system.sh  restore_backup.sh  test_redis_usage.py
tests/: README.md  TEST_COVERAGE.md  init_test_data.py  run_tests.sh  test_api_endpoints.py  test_rag_unit.py  test_response.py  test_smoke.py
