[project]
name = "industrial-qa-backend"
version = "0.1.0"
description = "Industrial QA agent backend with FastAPI + RAG pipeline"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Industrial QA Team", email = "ops@example.com" }]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.2",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "qdrant-client>=1.9.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "langchain>=0.2.0",
    "llama-index>=0.10.30",
    "openai>=1.35.0",
    "tiktoken>=0.7.0",
    "typer>=0.12.3",
    "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.7",
    "httpx>=0.27.0",
    "ruff>=0.4.8"
]

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

